// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postgresql draft migration and apply 1`] = `

Prisma Migrate created a draft migration 20201231000000_first

You can now edit it and then apply it by running prisma migrate --early-access-feature again.
`;

exports[`postgresql draft migration and apply 2`] = ``;

exports[`postgresql draft migration and apply 4`] = `Array []`;

exports[`postgresql draft migration and apply 5`] = `Array []`;

exports[`postgresql existingdb: first migration after init 1`] = ``;

exports[`postgresql existingdb: first migration after init 3`] = `Array []`;

exports[`postgresql existingdb: first migration after init 4`] = `Array []`;

exports[`postgresql first migration after init - empty.prisma 1`] = ``;

exports[`postgresql first migration after init - empty.prisma 3`] = `Array []`;

exports[`postgresql first migration after init - empty.prisma 4`] = `Array []`;

exports[`postgresql first migration after init --force + --name 1`] = ``;

exports[`postgresql first migration after init --force + --name 3`] = `Array []`;

exports[`postgresql first migration after init --force + --name 4`] = `Array []`;

exports[`postgresql first migration after init 1`] = ``;

exports[`postgresql first migration after init 3`] = `Array []`;

exports[`postgresql first migration after init 4`] = `Array []`;

exports[`postgresql schema only (--force) 2`] = `Array []`;

exports[`postgresql schema only (--force) 3`] = `Array []`;

exports[`sqlite broken migration should fail 2`] = ``;

exports[`sqlite broken migration should fail 3`] = ``;

exports[`sqlite draft migration and apply (--name) 1`] = `

Prisma Migrate created a draft migration 20201231000000_first

You can now edit it and then apply it by running prisma migrate --early-access-feature again.
`;

exports[`sqlite draft migration and apply (--name) 2`] = ``;

exports[`sqlite draft migration and apply (--name) 5`] = ``;

exports[`sqlite draft migration and apply (--name) 6`] = ``;

exports[`sqlite draft migration and apply (prompt) 1`] = `

Prisma Migrate created a draft migration 20201231000000_some_draft

You can now edit it and then apply it by running prisma migrate --early-access-feature again.
`;

exports[`sqlite draft migration and apply (prompt) 2`] = ``;

exports[`sqlite draft migration and apply (prompt) 5`] = ``;

exports[`sqlite draft migration and apply (prompt) 6`] = ``;

exports[`sqlite edited migration and unapplied empty draft 3`] = ``;

exports[`sqlite edited migration and unapplied empty draft 4`] = ``;

exports[`sqlite empty schema 1`] = ``;

exports[`sqlite empty schema 3`] = `Array []`;

exports[`sqlite empty schema 4`] = `Array []`;

exports[`sqlite existingdb: 1 unapplied draft + 1 schema change 1`] = ``;

exports[`sqlite existingdb: 1 unapplied draft + 1 schema change 3`] = `Array []`;

exports[`sqlite existingdb: 1 unapplied draft + 1 schema change 4`] = `Array []`;

exports[`sqlite existingdb: 1 unapplied draft 1`] = ``;

exports[`sqlite existingdb: 1 unapplied draft 3`] = `Array []`;

exports[`sqlite existingdb: 1 unapplied draft 4`] = `Array []`;

exports[`sqlite existingdb: has a failed migration (--force) 3`] = ``;

exports[`sqlite existingdb: has a failed migration (--force) 4`] = ``;

exports[`sqlite existingdb: has a failed migration 3`] = ``;

exports[`sqlite existingdb: has a failed migration 4`] = ``;

exports[`sqlite first migration (--name) 1`] = ``;

exports[`sqlite first migration (--name) 3`] = `Array []`;

exports[`sqlite first migration (--name) 4`] = `Array []`;

exports[`sqlite first migration (prompt) 1`] = ``;

exports[`sqlite first migration (prompt) 3`] = `Array []`;

exports[`sqlite first migration (prompt) 4`] = `Array []`;

exports[`sqlite first migration --force 1`] = ``;

exports[`sqlite first migration --force 3`] = ``;

exports[`sqlite first migration --force 4`] = ``;

exports[`sqlite removed applied migration and unapplied empty draft 3`] = ``;

exports[`sqlite removed applied migration and unapplied empty draft 4`] = ``;

exports[`sqlite snapshot of sql 1`] = ``;

exports[`sqlite transition-db-push-migrate (prompt no) 3`] = ``;

exports[`sqlite transition-db-push-migrate (prompt no) 4`] = ``;

exports[`sqlite transition-db-push-migrate (prompt yes) 3`] = ``;

exports[`sqlite transition-db-push-migrate (prompt yes) 4`] = ``;
